# Dummy-firmware-device

./: .gitignore
.github/workflows/: build.yml  deploy-debug_info.yml  deploy.yml
libfakedevice/: Cargo.toml  README.md  autorun.sh
libfakedevice-c/: README.md  autorun.sh  meson.build
libfakedevice-c/include/: device.h  feature.h
libfakedevice-c/src/: fake-firmware.c  feature.c
libfakedevice-c/subprojects/: openal.wrap
libfakedevice-cpp/: Makefile  README.md  autoconfig.sh  autorun.sh  meson.build
libfakedevice-cpp/include/: device.h  device.hpp  feature.h  features.h  features.hpp
libfakedevice-cpp/src/: device.cpp  fake-firmware.cpp  feature.cpp  features.cpp
libfakedevice-cpp/subprojects/: libcurl.wrap  opencv.wrap  rtaudio.wrap
libfakedevice-cpp/subprojects/libcurlWrap/: meson.build
libfakedevice-cpp/subprojects/opencvWrap/: meson.build
libfakedevice-cpp/subprojects/rtaudioWrap/: meson.build
libfakedevice-rust/: Cargo.toml  autorun.sh
libfakedevice-rust/src/: device.rs  features.rs
libfakedevice/src/: device.rs  features.rs  lib.rs
malicious-libfakedevice-c/: meson.build
malicious-libfakedevice-c/include/: feature.h
malicious-libfakedevice-c/src/: fake-firmware.c  feature.c
malicious-libfakedevice-c/subprojects/: libcurl.wrap
minimal-libfakedevice-c/: meson.build  straceout.txt
minimal-libfakedevice-c/include/: feature.h
minimal-libfakedevice-c/src/: fake-firmware.c  feature.c
minimal-libfakedevice-cpp/: meson.build
minimal-libfakedevice-cpp/include/: feature.h
minimal-libfakedevice-cpp/src/: fake-firmware.cpp  feature.cpp
